--- a/SkyAutoNavi/app/src/main/res/layout/main_map_fragment.xml
+++ b/SkyAutoNavi/app/src/main/res/layout/main_map_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.skyworthauto.navi.views.NaviRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,12 +11,14 @@
         android:layout_centerVertical="true"
         android:nextFocusLeft="@+id/map_zoom_out"
         android:nextFocusRight="@+id/ib_status_bar_top_bar_bg"
-        android:src="@drawable/auto_bg_map_btn_selector">
+        android:src="@drawable/auto_map_ic_go_content"
+        android:background="@drawable/auto_map_go_slc">
 
         <requestFocus />
     </ImageButton>
 
     <include
+        android:id="@+id/control_status_top_bar"
         layout="@layout/view_status_bar_topbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,4 +26,4 @@
 
     <include layout="@layout/main_map_view" />
 
-</com.skyworthauto.navi.views.NaviRelativeLayout>
+</RelativeLayout>
