--- a/SkyAutoNavi/app/src/main/res/layout/route_path_list_item.xml
+++ b/SkyAutoNavi/app/src/main/res/layout/route_path_list_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/auto_panel_content"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/auto_dimen2_24"
+        android:paddingLeft="@dimen/auto_dimen2_24"
         android:orientation="vertical">
 
         <LinearLayout
