--- a/SkyAutoNavi/app/src/main/res/layout/view_status_bar_topbar.xml
+++ b/SkyAutoNavi/app/src/main/res/layout/view_status_bar_topbar.xml
@@ -75,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/auto_dimen2_5"
+        android:layout_marginRight="@dimen/auto_dimen2_21"
         android:background="@drawable/auto_bg_map_btn_selector"
         android:focusable="true"
         android:nextFocusLeft="@id/ib_status_bar_top_bar_bg"
